# pytest-tzshift

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml  tox.ini
.github/workflows/: CI.yml  release.yml
docs/: contributing.md  index.md  license.md  requirements.txt
docs/reference/: api.md
docs/usage/: configuration.md  markers.md  quickstart.md
src/pytest_tzshift/: __init__.py  _types.py  plugin.py
tests/: test_advanced_scenarios.py  test_example_usage.py  test_tzshift.py  test_unit_internals.py
